CD/Terraform/Production/modules/instances/eni.tf
resource "aws_network_interface" "app_1_interface" {
  subnet_id       = var.private_subnet_1_id
  security_groups = [aws_security_group.app_sg.id]
  private_ips     = ["11.0.3.100"]
}

resource "aws_network_interface" "app_2_interface" {
  subnet_id       = var.private_subnet_2_id
  security_groups = [aws_security_group.app_sg.id]
  private_ips     = ["11.0.4.100"]
}

resource "aws_network_interface" "db_master_interface" {
  subnet_id       = var.private_subnet_3_id
  security_groups = [aws_security_group.db_sg.id]
  private_ips     = ["11.0.5.100"]
}

resource "aws_network_interface" "db_slave_interface" {
  subnet_id       = var.private_subnet_4_id
  security_groups = [aws_security_group.db_sg.id]
  private_ips     = ["11.0.6.100"]
}
